# DRF_ToDo_List

./: .env.sample  README.md  README_EN.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
